Fix terminal overflow

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -229,6 +229,7 @@ body {
 
 .footer {
   box-sizing: border-box;
+  overflow: hidden;
 
   @include no-flexbox {
     position: fixed;
